# easy_swmm

./: .gitignore  Dockerfile  README.md  \  main.py  mkdocs.yml  pyproject.toml
docs/: index.md  sections.md
docs/sections/: core_section.md  section_type.md
docs/stylesheets/: vscode.css
examples/: test_parser.py
src/easy_swmm/core/: model.py  sections.py
src/easy_swmm/io/: model.py  parser.py
tests/: test_io.py
