[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-swmm"
version = "0.1.0"
description = "Easy SWMM parsing library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
